--- a/ansible/ec2_prov_playbook.yml
+++ b/ansible/ec2_prov_playbook.yml
@@ -39,9 +39,9 @@
         ec2_ip_address: "{{ item.public_ip }}"
       with_items: "{{ ec2.instances }}"
 
-    #- name: Wait for the instances to boot by checking the ssh port
-    #  wait_for: host={{item.public_ip}} port=22 delay=15 timeout=300 state=started
-    #  with_items: "{{ ec2.instances }}"
+    - name: Wait for the instances to boot by checking the ssh port
+      wait_for: host={{item.public_ip}} port=22 delay=15 timeout=300 state=started
+      with_items: "{{ ec2.instances }}"
 
     # update shippable resource state
     - name: run cmd
