--- a/ansible/ec2_prov_playbook.yml
+++ b/ansible/ec2_prov_playbook.yml
@@ -10,15 +10,18 @@
     - name: Provision {{ ec2_count }} instances with tag {{ ec2_tag_Role }}
       local_action:
         module: ec2
-        name: "aws-ec2-demo"
+        name: "sanjay-aws-ec2-demo"
         key_name: "{{ ec2_keypair }}"
-        group_id: "{{ ec2_security_group_id }}"
-        instance_type: "{{ ec2_instance_type }}"
-        image: "{{ ec2_image }}"
         vpc_subnet_id: "{{ ec2_subnet_id }}"
+        instance_type: "{{ ec2_instance_type }}"
+        security_group: "{{ ec2_security_group_id }}"
+        network:
+          assign_public_ip: true
+        image_id: "{{ ec2_image }}"
+        tags:
+          Environment: Testing
         region: "{{ ec2_region }}"
         instance_tags: '{"Type":"{{ec2_instance_type}}", "Role":"{{ec2_tag_Role}}"}'
-        assign_public_ip: yes
         wait: true
         exact_count: "{{ ec2_count }}"
         count_tag:
