--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -8,3 +8,4 @@ private_key_file=${AWS_EC2_PEM_KEYPATH}
 
 # for running on Ubuntu
 control_path=%(directory)s/%%h-%%r
+force_valid_group_names=never
