--- a/ansible/ec2_prov_playbook.yml
+++ b/ansible/ec2_prov_playbook.yml
@@ -38,9 +38,9 @@
         ec2_tag_Role: "{{ ec2_tag_Role }}"
         ec2_ip_address: "{{ item.public_ip }}"
       with_items: "{{ ec2.instances }}"
-
+        
     - name: Wait for the instances to boot by checking the ssh port
-      wait_for: host={{item.public_ip}} port=22 delay=15 timeout=300 state=started
+      local_action: wait_for host={{item.public_dns_name}} port=22 delay=60 timeout=320 state=started
       with_items: "{{ ec2.instances }}"
 
     # update shippable resource state
